--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,10 +79,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-#  fonts:
-#    - family: kunstlerscript
-#      fonts:
-#        - asset: fonts/kunstlerscript.ttf
+  fonts:
+    - family: Schoolbell
+      fonts:
+        - asset: assets/fonts/Schoolbell-Regular.ttf
 
   #
   # For details regarding fonts from package dependencies,
